--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
                 <a href="#" onclick="showPage('about')">About</a>
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms of Service</a>
-                <a href="#">Contact Us @ owajimamdivine@gmail.com</a>
+                <a href="#">Contact Us @Daniellajoseph1996@gmail.com</a>
             </div>
             
             <p class="copyright">
